Card title misalignment bug fix

--- a/assets/style.css
+++ b/assets/style.css
@@ -49,7 +49,7 @@ body {
 /*========= CARDS =========*/
 .title {
     display: flex;
-    align-items: center;
+    justify-content: center;
 }
 
 .card-home {
